azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
   "parameters": {
       "minikubeVMName": {
           "type": "string"
       },
       "minikubePassword": {
           "type": "securestring"
       },
       "vNETResourceGroup": {
           "type": "string",
            "defaultValue": "[resourceGroup().name]",
            "metadata": {
                "description": "VNET Resource Group Name(if an existing VNET is used)."
                }
            },
        "wafvmname": {
            "type": "string",
            "metadata": {
                "description": "waf vm name"
            }
        }
       },
    "variables": {
        "minikubevm": "[parameters('minikubeVMName')]",
        "minikubeStorage": "[toLower(concat(variables('minikubevm'),'storage'))]",
        "minkubePublicIP": "[toLower(concat(variables('minikubevm'),'PublicIP'))]",
        "minikubensg": "[toLower(concat(variables('minikubevm'),'-nsg'))]",
        "minikubevnetname": "[toLower(concat(variables('minikubevm'),'-VirtualNetwork'))]",
        "minikubesubnet": "[toLower(concat(variables('minikubevm'),'-VirtualNetwork-Subnet'))]",
        "minikubenic": "[toLower(concat(variables('minikubevm'),'-NetworkInterface'))]",
        "vnetID": "[resourceId(parameters('vNETResourceGroup'), 'Microsoft.Network/virtualNetworks', variables('minikubevnetname'))]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('minikubesubnet'))]",
        "wafsubnet": "[toLower(concat(variables('minikubevm'),'-VirtualNetwork-WafSubnet'))]",
        "wafpassword": "[parameters('minikubePassword')]",
        "wafvmname": "[parameters('wafvmname')]"

    },
    "resources": [
        {
            "name": "[variables('minikubeStorage')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "MiniKube Storage Account"
            },
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('minkubePublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "PublicIPAddress"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[toLower(variables('minikubevm'))]"
                }
            }
        },
        {
            "name": "[variables('minikubensg')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "ssh access port",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "nsgRule2",
                        "properties": {
                            "description": "management port",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('minikubevnetname')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('minikubensg'))]"
            ],
            "tags": {
                "displayName": "Minikube-VirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('minikubesubnet')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('minikubensg'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('wafsubnet')]",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24"
                        }
                    }

                ]
            }
        },
        {
            "name": "[variables('minikubenic')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('minkubePublicIP'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('minikubevnetname'))]"
            ],
            "tags": {
                "displayName": "MiniKube-NetworkInterface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('minkubePublicIP'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('minikubevnetname'), variables('minikubesubnet'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('minikubevm')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('minikubenic'))]"
            ],
            "tags": {
                "displayName": "MiniKube Server"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A4_v2"
                },
                "osProfile": {
                    "computerName": "[variables('minikubevm')]",
                    "adminUsername": "labuser",
                    "adminPassword": "[parameters('minikubePassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(variables('minikubevm'),'-OSDisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('minikubenic'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(variables('minikubeStorage')))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[concat(variables('minikubevm'),'/customScript1')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "Deployment Script for Minikube"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('minikubevm'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.1",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://raw.githubusercontent.com/aravindan-acct/JWT_validation_with_WAF_demo/main/scripts/customScript.sh"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "sudo nohup bash customScript.sh"
                }
            }
        },
        {
            "name": "linkedDeployment1",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2020-10-01",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "https://raw.githubusercontent.com/aravindan-acct/JWT_validation_with_WAF_demo/main/wafdeploy.json",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "wafvmname": "[variables('wafvmname')]",
                    "wafvnet": "[variables('minikubevnetname')]",
                    "wafsubnet": "[variables('wafsubnet')]",
                    "wafpassword": "[variables('wafpassword')]"
            }
            }
        }
    ],
    "outputs": {}
}
